--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
 In progress</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Zilch">
-<style>
-body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
-h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
-p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:normal;color:#000000;background-color:#ffffff;}
-</style>
 </head>
-<body>
-<h1></h1>
-<p></p>
+  
+<body background="gpug.jpg">
+<h1>Hello world!</h1>
+<p><a href="https://www.w3schools.com">Visit W3Schools.com!</a></p>
 </body>
+  
 </html>
