--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ In progress</title>
 <meta name="description" content="Zilch">
 </head>
   
-<body background="gpug.jpg">
+<body background="images/gpug.jpg">
 </body>
   
 </html>
