--- a/index.html
+++ b/index.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head>
-<!-- HTML Codes by Quackit.com -->
-<title>
-In progress</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Zilch">
-</head>
-  
-<body background="images/gpug.jpg">
-</body>
+	<head>
+		<title>
+			In progress
+		</title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script       src="https://code.jquery.com/jquery-3.3.1.min.js"
+					  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+					  crossorigin="anonymous"></script>
+		<script  src="js/script.js" ></script>
+	</head>
+	 
+	<body background="images/gpug.jpg">
+
+		<div class=title>
+			<h1 id="maintitle"> MACANATIONS </h1>
+		</div>
+
+		<div class=options>
+			<h2> blog</h2>
+		</div>
+		<div class=options>
+			<h2> about </h2>
+		</div>
+		<div class=options>
+			<h2> contact </h2>
+		</div>
+
+		<div class=hbar>
+		</div>
+
+		<div id="tile1" class="tiles">  
+		    <img id="tileimg" src="images/1.jpg" alt="tile", width="400" />
+		</div>
+		<div id="tile2" class="tiles">  
+		    <img id="tileimg" src="images/2.jpg" alt="tile", width="400" />
+		</div>
+		<div id="tile3" class="tiles">  
+		    <img id="tileimg" src="images/3.jpg" alt="tile", width="400" />
+		</div>
+		<div id="tile4" class="tiles">  
+		    <img id="tileimg" src="images/4.jpg" alt="tile", width="400" />
+		</div>
+
+	</body>
   
 </html>
