--- a/index.html
+++ b/index.html
@@ -32,9 +32,16 @@
 			</div>
 			<br/>
 		</div>
-
-		<div>
+		
+		<div class=data>
 			<p id="maintiles"></p>
+			<!--
+			<div id="tile1" class="tiles">  
+				<img id="tileimg" src="images/1.jpg" alt="tile"/> 
+				<p class="text">Hey I am text on an Image. </p>
+			</div>
+			-->
+
 		</div>
 
 		<script>
