--- a/data/2.html
+++ b/data/2.html
@@ -1,1 +1,12 @@
-<h1> Second project </h1>
+<link rel="stylesheet" type="text/css" href="css/1.css">
+
+
+<div class="projecttiles">
+	<img src="images/1/axis.png" class="projectimage">
+</div>
+
+<div class="projecttiles">
+	<img src="images/1/shared_map.png" class="projectimage">
+</div>
+
+<script  src="js/2.js" ></script>
