--- a/data/1.html
+++ b/data/1.html
@@ -2,11 +2,14 @@
 
 
 <div class="projecttiles">
-	<img src="images/1/axis.png" class="projectimage">
+	<img src="images/1/axis.png" class="projectimage" id="one">
 </div>
 
 <div class="projecttiles">
-	<img src="images/1/shared_map.png" class="projectimage">
+	<img src="images/1/shared_map.png" class="projectimage" id="two">
+</div>
+
+<div class="bottom">
 </div>
 
 <script  src="js/1.js" ></script>
