--- a/index.html
+++ b/index.html
@@ -16,25 +16,17 @@
 	<body>
 
 		<div id=topbar>
-			<div class="title">
-				<h1 id="maintitle" ><a href="index.html">MACANATIONS</a></h1>
-			</div>
-			<div id=top-options>
-				<div class="options active" data-optionsid="#maintiles" id="maintilesheader">
-					<h2> work </h2>
-					<h2 id=arrow > &#x25C0 </h2>
-				</div>
-				<div class="options inactive" data-optionsid="#about">
-					<h2> about </h2>
-				</div>
-				<div class="options inactive" data-optionsid="#contact">
-					<h2> contact </h2>
-				</div>
-			</div>
-
-			<div class=hbar>
-			</div>
-			<br/>
+			<ul>
+				<li class="maintitle"><a href="index.html">MACANATIONS</a></li>
+				<li class="options" data-optionsid="#maintiles" ><a href="#" class= "active">
+					<div id="arrowdiv">
+						<h2> work </h2>
+						<h2 id=arrow > &#x25C0 </h2>
+					</div>
+				</a></li>
+				<li class="options" data-optionsid="#about"><a href="#" class= "inactive">about</a></li>
+				<li class="options" data-optionsid="#contact"><a href="#" class= "inactive">contact</a></li>
+			</ul>
 		</div>
 		
 		<div class=data>
