--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			var i;
 			var abstract = ["project1", "project2", "project3", "project4", "project5", "project5", "project6", "project7", "project8", "project9"];
 			for (i = 1; i < 11; i++) {
-			    text += "<div id=\"tile"+i+"\" class=\"tiles\" data-projectid="+i+"> <img id=\"tileimg\" src=\"images/"+i+".jpg\" alt=\"tile\"/> <div class=\"middle\"> <div class=\"text\">"+abstract[i-1]+"</div> </div> </div>"
+			    text += "<div id=\"tile"+i+"\" class=\"tiles\" data-projectid="+i+"> <img id=\"tileimg\" src=\"images/"+i+"/main.jpg\" alt=\"tile\"/> <div class=\"middle\"> <div class=\"text\">"+abstract[i-1]+"</div> </div> </div>"
 			}
 			document.getElementById("maintiles").innerHTML = text;
 		</script>
