--- a/test.html
+++ b/test.html
@@ -26,6 +26,14 @@
 			</ul>
 		</div>
 
+		<div class="tiles">
+			<img src="images/1/main.jpg">
+		</div>
+
+		<div class="tiles">
+			<img src="images/2/main.jpg">
+		</div>
+
 		<div class=bottom>
 		</div>
 	</body>
