--- a/data/1.html
+++ b/data/1.html
@@ -1,15 +1,15 @@
 <link rel="stylesheet" type="text/css" href="css/1.css">
 
 
-<div class="projecttiles">
-	<img src="images/1/axis.png" class="projectimage" id="one">
-</div>
+		<div class="projecttiles">
+			<img src="images/1/main.jpg">
+		</div>
 
-<div class="projecttiles">
-	<img src="images/1/shared_map.png" class="projectimage" id="two">
-</div>
+		<div class="projecttiles">
+			<img src="images/2/main.jpg">
+		</div>
 
-<div class="bottom">
-</div>
+		<div class=bottom>
+		</div>
 
 <script  src="js/1.js" ></script>
