--- a/data/2.html
+++ b/data/2.html
@@ -1,12 +1,15 @@
-<link rel="stylesheet" type="text/css" href="css/1.css">
+<link rel="stylesheet" type="text/css" href="css/2.css">
 
+		<div class="projecttiles">
+			<iframe id="interactive" src="data/interactive.html"></iframe>
+		</div>
 
-<div class="projecttiles">
-	<img src="images/1/axis.png" class="projectimage">
-</div>
+		<div class="projecttiles">
+			<img src="images/2/main.jpg">
+		</div>
 
-<div class="projecttiles">
-	<img src="images/1/shared_map.png" class="projectimage">
-</div>
+		<div class="projecttiles">
+			<img src="images/2/main.jpg">
+		</div>
 
 <script  src="js/2.js" ></script>
