--- a/data/4.html
+++ b/data/4.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/3.css">
+<link rel="stylesheet" type="text/css" href="css/4.css">
 
 	<div class="projecttiles">
 		<iframe id="interactive"
@@ -7,11 +7,14 @@
 	</div>
 
 	<div class="projecttiles">
-		<img src="images/1/axis.png" class="projectimage">
+		<img src="images/1/main.jpg">
 	</div>
 
 	<div class="projecttiles">
-		<img src="images/1/shared_map.png" class="projectimage">
+		<img src="images/2/main.jpg">
 	</div>
 
-<script  src="js/3.js" ></script>
+	<div class=bottom>
+	</div>
+
+<script  src="js/4.js" ></script>
