--- a/data/2.html
+++ b/data/2.html
@@ -4,12 +4,12 @@
 			<iframe id="interactive" src="data/interactive.html"></iframe>
 		</div>
 
-		<div class="projecttiles">
-			<img src="images/2/main.jpg">
-		</div>
+	<div class="projecttiles invisiblepage">
+		<img src="images/2/py3.png">
+	</div>
 
-		<div class="projecttiles">
-			<img src="images/2/main.jpg">
-		</div>
+	<div class="projecttiles invisiblepage">
+		<img src="images/2/py5.png">
+	</div>
 
 <script  src="js/2.js" ></script>
