--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		</div>
 		
 		<div class=data>
+			<noscript>Please Enable Javascript</noscript>
 			<div id="maintiles"></div>
 
 			<div id="details" class="inactivepage">
