--- a/data/1.html
+++ b/data/1.html
@@ -6,15 +6,13 @@
 		</iframe>
 	</div>
 
-	<div class="projecttiles">
-		<img src="images/1/main.jpg">
+	<div class="projecttiles invisiblepage">
+		<img src="images/1/sam1.png">
 	</div>
 
-	<div class="projecttiles">
-		<img src="images/2/main.jpg">
-	</div>
-
-	<div class=bottom>
+	<div class="projecttiles invisiblepage">
+		<img src="images/1/sha.png">
 	</div>
 
 <script  src="js/1.js" ></script>
+</body>
