--- a/data/1.html
+++ b/data/1.html
@@ -14,5 +14,13 @@
 		<img src="images/1/sha.png">
 	</div>
 
+	<div class="projecttiles invisiblepage">
+		<img src="images/1/sha.png">
+	</div>
+
+	<div class="projecttiles invisiblepage">
+		<img src="images/1/sha.png">
+	</div>
+
 <script  src="js/1.js" ></script>
 </body>
