--- a/data/3.html
+++ b/data/3.html
@@ -1,8 +1,16 @@
 <link rel="stylesheet" type="text/css" href="css/3.css">
 
-	<div class="projecttiles">
-		<iframe id="interactive"
-		src="https://www.youtube.com/embed/aUa4rkjqxWc">
+	<div class="projecttilescontainer">
+		<div class="imgplaceholder">
+			<div class="darken">
+				<img class="iframeholder" src="images/3/main.jpg" style="cursor:pointer" />
+			</div>
+			<div class="middleimg">
+				<img class="play" src="images/play.png" style="cursor:pointer" />
+			</div>
+		</div>
+		<iframe class="interactive"
+		src="#">
 		</iframe>
 	</div>
 
