--- a/data/2.html
+++ b/data/2.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="css/2.css">
 
-	<div class="projecttiles">
-		<iframe id="interactive" src="data/interactive.html"></iframe>
+	<div class="projecttilescontainer">
+		<iframe class="interactive" src="data/interactiveplaceholder.html"> </iframe>
 	</div>
 
 	<div class="projecttiles invisiblepage">
@@ -10,6 +10,10 @@
 
 	<div class="projecttiles invisiblepage">
 		<img src="images/2/py5.png">
+	</div>
+
+	<div class="projecttiles invisiblepage">
+		<img src="images/2/py6.png">
 	</div>
 
 <script  src="js/2.js" ></script>
