--- a/data/3.html
+++ b/data/3.html
@@ -15,11 +15,15 @@
 	</div>
 
 	<div class="projecttiles">
-		<img src="images/1/axis.png" class="projectimage">
+		<img src="images/3/cicada.jpg" class="projectimage">
 	</div>
 
 	<div class="projecttiles">
-		<img src="images/1/shared_map.png" class="projectimage">
+		<img src="images/3/nano.jpeg" class="projectimage">
+	</div>
+
+	<div class="projecttiles">
+		<img src="images/3/boom.jpeg" class="projectimage">
 	</div>
 
 <script  src="js/3.js" ></script>
