--- a/data/4.html
+++ b/data/4.html
@@ -1,14 +1,9 @@
 <link rel="stylesheet" type="text/css" href="css/4.css">
 
-	<div class="projecttiles">
-		<img src="images/1/main.jpg">
+
+	<div class="projecttilescontainer">
+		<iframe class="interactive" src="data/interactiveplaceholder.html"> </iframe>
 	</div>
 
-	<div class="projecttiles">
-		<img src="images/2/main.jpg">
-	</div>
-
-	<div class=bottom>
-	</div>
 
 <script  src="js/4.js" ></script>
