--- a/data/5.html
+++ b/data/5.html
@@ -15,20 +15,25 @@
 	</div>
 
 	<div class="projecttiles invisiblepage">
-		<img src="images/1/sam1.png">
+		<img src="images/5/har.png">
 	</div>
 
 	<div class="projecttiles invisiblepage">
-		<img src="images/1/sha.png">
+		<img src="images/5/cham.png">
 	</div>
 
 	<div class="projecttiles invisiblepage">
-		<img src="images/1/sha.png">
+		<img src="images/5/bake.png">
 	</div>
 
 	<div class="projecttiles invisiblepage">
-		<img src="images/1/sha.png">
+		<img src="images/5/cyl.png">
 	</div>
+
+	<div class="projecttiles invisiblepage">
+		<img src="images/5/trap.png">
+	</div>
+
 
 <script  src="js/5.js" ></script>
 </body>
