--- a/test.html
+++ b/test.html
@@ -14,37 +14,9 @@
 	</head>
 	 
 	<body>
-		<div id=topbar>
-			<ul>
-				<li class="maintitle"><a href="index.html">MACANATIONS</a></li>
-				<li class="options" data-optionsid="#maintiles" ><a href="#" class= "active">
-					<div id="arrowdiv">
-						<h2> work </h2>
-						<h2 id=arrow > &#x25C0 </h2>
-					</div>
-				</a></li>
-				<li class="options" data-optionsid="#about"><a href="#" class= "inactive">about</a></li>
-				<li class="options" data-optionsid="#contact"><a href="#" class= "inactive">contact</a></li>
-			</ul>
+		<div style="text-align: center; vertical-align: middle;">
+			<img src="images/glove.png">
 		</div>
-
-	<link rel="stylesheet" type="text/css" href="css/1.css">
-
-		<div class="projecttiles">
-			<iframe id="interactive"
-			src="https://www.youtube.com/embed/digWQXf9Zj0">
-			</iframe>
-		</div>
-
-		<div class="projecttiles invisiblepage">
-			<img src="images/1/main.jpg">
-		</div>
-
-		<div class="projecttiles invisiblepage">
-			<img src="images/2/main.jpg">
-		</div>
-
-	<script  src="js/1.js" ></script>
 	</body>
   
 </html>
