--- a/data/1.html
+++ b/data/1.html
@@ -23,11 +23,15 @@
 	</div>
 
 	<div class="projecttiles invisiblepage">
-		<img src="images/1/sha.png">
+		<img src="images/1/as1.png">
 	</div>
 
 	<div class="projecttiles invisiblepage">
-		<img src="images/1/sha.png">
+		<img src="images/1/axis.png">
+	</div>
+
+	<div class="projecttiles invisiblepage">
+		<img src="images/1/par.png">
 	</div>
 
 <script  src="js/1.js" ></script>
