--- a/data/1.html
+++ b/data/1.html
@@ -1,5 +1,11 @@
 <link rel="stylesheet" type="text/css" href="css/1.css">
 
+	<div class="projecttitle">
+		<h2>
+			Perched camera approach for generating a shared world map and simultaneous localization and mapping of a multi-robot system
+		</h2>
+	</div>
+
 	<div class="projecttilescontainer">
 		<div class="imgplaceholder">
 			<div class="darken">
@@ -12,6 +18,14 @@
 		<iframe class="interactive"
 		src="#">
 		</iframe>
+
+		<p>The video above shows a small application of the dynamic map built by Cozmo. With no prior information about the walls, Cozmo is able to SEE them and cruise through to the target.</p>
+	</div>
+
+	<div class="projecttiles invisiblepage">
+		<img class="left" src="images/1/as1.png">
+		<div class="righttext"> Using geometry based computer vision, the positions of Aruco markers were calculated from monocular cameras </div>
+		<br style="clear: both;" />
 	</div>
 
 	<div class="projecttiles invisiblepage">
