--- a/data/interactiveplaceholder.html
+++ b/data/interactiveplaceholder.html
@@ -2,4 +2,6 @@
 	<img src="../images/glove.png" height="80">
 	<br/>
 	Click to Interact
+	<br/>
+	Disable ADBlocker if page fails to load after click
 </div>
