--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="js/jquery.iframetracker.min.js"></script>
+		<script src="js/iframet.js"></script>
 		<script  src="js/jquery.waypoints.min.js" ></script>
 		<script  src="js/sticky.min.js" ></script>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
