--- a/data/2.html
+++ b/data/2.html
@@ -1,19 +1,65 @@
 <link rel="stylesheet" type="text/css" href="css/2.css">
 
+	<div class="projecttitle">
+		<h2>
+			eLISA Gravitational Wave Detector
+		</h2>
+
+	</div>
+
 	<div class="projecttilescontainer">
 		<iframe class="interactive" src="data/interactiveplaceholder.html"> </iframe>
+		<p>
+			The evolved laser Interferometer space antenna is a mission proposed by the European Space Agency. It will be used to detect and measure low frequency gravitational waves in the range of 10<sup>-5</sup> Hz to 1 Hz. The mission is set to be launched in 2034, but a forerunner mission, the LISA Pathfinder was launched on December 3 2015 to test the technologies that are planned for eLISA.
+			The interactive plot above is the estimated path of the space-crafts around the sun.
+		</p>
 	</div>
 
 	<div class="projecttiles invisiblepage">
-		<img src="images/2/py3.png">
+		<table>
+		  <tr>
+		    <th><img src="images/2/py5.png"></th>
+		    <th class="righttext"> 
+		    	Three space-crafts follow a Helio-centric orbit around the sun. They form an equilateral triangle with an arm length in the order of one million km. The interferometer requires the space-crafts to maintain constant distance between them.
+
+				<br style="clear: both;" />
+			</th> 
+		  </tr>
+		</table>
 	</div>
 
 	<div class="projecttiles invisiblepage">
-		<img src="images/2/py5.png">
+		<table>
+		  <tr>
+		    <th><img src="images/2/py3.png"></th>
+		    <th class="righttext"> 
+		    	This plot measures the oscillation in the distances between the spacecrafts, for all initial phases. 
+		    	<br/>
+		    	<br/>
+		    	Clearly a global minimum is observer, which indicates the ideal orbit for the spacecrafts.
+				<br style="clear: both;" />
+			</th> 
+		  </tr>
+		</table>
 	</div>
 
 	<div class="projecttiles invisiblepage">
-		<img src="images/2/py6.png">
+		<table>
+		  <tr>
+		    <th><img src="images/2/py6.png"></th>
+		    <th class="righttext"> 
+		    	The following is a plot of the distance between the three spacecrafts over a year.
+		    	<br/>
+		    	<br/>
+		    	 The orbits were optimized using the plot described above. Since the oscillations are deterministic, the deviations in the gravitational wave readings can be manually removed.
+				<br style="clear: both;" />
+			</th> 
+		  </tr>
+		</table>
+	</div>
+
+	<div class="projecttiles">
+		<p>More details are described in this <a href="pdf/eLISA.pdf">report</a> </p>
 	</div>
 
 <script  src="js/2.js" ></script>
