--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<div id=topbar>
 			<ul>
-				<li class="maintitle"><a href="index.html">machinations</a></li>
+				<li class="maintitle"><a href="index.html">george joseph</a></li>
 				<li class="options" data-optionsid="#maintiles" ><a href="#" class= "active">
 					<div id="arrowdiv">
 						<h2> work </h2>
