--- a/data/3.html
+++ b/data/3.html
@@ -1,5 +1,11 @@
 <link rel="stylesheet" type="text/css" href="css/3.css">
 
+	<div class="projecttitle">
+		<h2>
+			Aerodynamics Club
+		</h2>
+	</div>
+
 	<div class="projecttilescontainer">
 		<div class="imgplaceholder">
 			<div class="darken">
@@ -12,18 +18,60 @@
 		<iframe class="interactive"
 		src="#">
 		</iframe>
+
+		<p>
+			The Aerodynamics club is a
+		</p>
+	</div>
+
+	<div class="projecttiles invisiblepage">
+		<table>
+		  <tr>
+		    <th><img class="left" src="images/3/cicada.jpg"></th>
+		    <th class="righttext"> 
+		    	The Cicada is a Y-Hexacopter built to lift heavy cameras for mesmerizing aerial shots.
+		    	<br/>
+		    	<br/>
+		    	Like all our crafts, this was built from scratch, including the wodden frame.
+				<br style="clear: both;" />
+			</th> 
+		  </tr>
+		</table>
+	</div>
+
+	<div class="projecttiles invisiblepage">
+		<table>
+		  <tr>
+		    <th class="lefttext">
+		    	The Hydra was our micro-quadcopter, with coreless DC motors.
+		    	<br/>
+		    	<br/>
+		    	The body was designed by our members and printed using our custom 3D printer.
+				<br style="clear: both;" />
+			</th>
+		    <th><img class="right" src="images/3/nano.jpeg"></th>
+		  </tr>
+		</table>
+	</div>
+
+	<div class="projecttiles invisiblepage">
+		<table>
+		  <tr>
+		    <th><img class="left" src="images/3/boom.jpeg"></th>
+		    <th class="righttext"> 
+		    	The Inverted V-tail twin boom plane was built by all the participants in our annual workshop.
+		    	<br/>
+		    	<br/>
+		    	This glider that was designed to be slow and easy to fly, perfect for newbie flyers.
+				<br style="clear: both;" />
+			</th> 
+		  </tr>
+		</table>
 	</div>
 
 	<div class="projecttiles">
-		<img src="images/3/cicada.jpg" class="projectimage">
-	</div>
-
-	<div class="projecttiles">
-		<img src="images/3/nano.jpeg" class="projectimage">
-	</div>
-
-	<div class="projecttiles">
-		<img src="images/3/boom.jpeg" class="projectimage">
+		<p>Updated events and details can be found <a href="https://www.facebook.com/groups/aerodbitsgoa">here</a> </p>
 	</div>
 
 <script  src="js/3.js" ></script>
+</body>
